# incident-manager

./: .gcloudignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORRELATION_GUIDE.md  CORRELATION_IMPLEMENTATION.md  Cargo.toml  Dockerfile  ESCALATION_GUIDE.md  GRAPHQL_SCHEMA.graphql  GRPC_GUIDE.md  GRPC_IMPLEMENTATION.md  HRTB_FIX_CODE_COMPARISON.md  HRTB_FIX_SUMMARY.md  HRTB_FIX_VERIFICATION.md  LICENSE-MIT  ML_GUIDE.md  ML_IMPLEMENTATION.md  Makefile  PHASE_2B_INTEGRATION_REPORT.md  README.md  STORAGE_GUIDE.md  STORAGE_IMPLEMENTATION.md  build.rs  docker-compose.yml  index.js  package-lock.json  package.json  verify_hrtb_fix.sh
.claude-flow/: CIRCUIT_BREAKER_ARCHITECT_DELIVERABLES.md  CIRCUIT_BREAKER_CONFIGURATION_SCHEMA.md  CIRCUIT_BREAKER_CORE_ARCHITECTURE.md  CIRCUIT_BREAKER_FAILURE_DETECTION.md  CIRCUIT_BREAKER_FALLBACK_MECHANISMS.md  CIRCUIT_BREAKER_INTEGRATION_PATTERNS.md  CIRCUIT_BREAKER_STATE_MACHINE.md  GRAPHQL_ARCHITECT_DELIVERABLES.md  GRAPHQL_QA_DELIVERABLES.md  QA_DELIVERABLES.md  TEST_FILES_INDEX.txt  WEBSOCKET_ARCHITECTURE_DIAGRAMS.md  WEBSOCKET_ARCHITECT_DELIVERABLES.md  WEBSOCKET_EXECUTIVE_SUMMARY.md  WEBSOCKET_QA_DELIVERABLES.md  WEBSOCKET_QUICK_REFERENCE.md  WEBSOCKET_TEST_INDEX.md
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: publish-crate.yml
benches/: circuit_breaker_benchmark.rs  graphql_benchmark.rs  metrics_benchmark.rs
benchmarks/output/: summary.md
config/: circuit_breakers.yaml  circuit_breakers_production.yaml  default.toml
deploy/: CLI_ACTIVATION_VERIFICATION.md  DEPLOYMENT.md  DEPLOYMENT_COMMANDS.md  ENVIRONMENT_CONFIGURATION.md  FAILURE_MODES_ROLLBACK.md  PERSISTENCE_WIRING.md  PLATFORM_INTEGRATION.md  POST_DEPLOY_VERIFICATION.md  README.md  SERVICE_TOPOLOGY.md  cloudbuild.yaml  service.yaml  verify-deployment.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_PATTERNS.md  ARCHITECTURE_SUMMARY.md  CIRCUIT_BREAKER_API_REFERENCE.md  CIRCUIT_BREAKER_EXECUTIVE_SUMMARY.md  CIRCUIT_BREAKER_FILES_INDEX.md  CIRCUIT_BREAKER_GUIDE.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CIRCUIT_BREAKER_INITIALIZATION_EXAMPLE.md  CIRCUIT_BREAKER_INTEGRATION_GUIDE.md  CIRCUIT_BREAKER_OPERATIONS_GUIDE.md  CIRCUIT_BREAKER_QUICK_REFERENCE.md  CRATE_SELECTION_GUIDE.md  DIAGRAMS.md  ENRICHMENT_GUIDE.md  ENRICHMENT_IMPLEMENTATION.md  ESCALATION_IMPLEMENTATION.md  GRAPHQL_API_GUIDE.md  GRAPHQL_ARCHITECTURE.md  GRAPHQL_ARCHITECTURE_DIAGRAM.md  GRAPHQL_DEVELOPMENT_GUIDE.md  GRAPHQL_EXAMPLES.md  GRAPHQL_GUIDE.md  GRAPHQL_IMPLEMENTATION.md  GRAPHQL_IMPLEMENTATION_GUIDE.md  GRAPHQL_INTEGRATION_GUIDE.md  GRAPHQL_README.md  GRAPHQL_SCHEMA_REFERENCE.md  GRAPHQL_TESTING_INDEX.md  GRAPHQL_TEST_SPECIFICATION.md  GRAPHQL_VS_REST.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MESSAGING_GUIDE.md  METRICS_GUIDE.md  METRICS_IMPLEMENTATION.md  METRICS_OPERATIONAL_RUNBOOK.md  METRICS_QUICK_REFERENCE.md  NOTIFICATIONS_GUIDE.md  NOTIFICATIONS_IMPLEMENTATION.md  (+35 more)
examples/: config-redis-cluster.toml  config-redis.toml  config-sled.toml  grpc_list_incidents.sh  grpc_submit_alert.sh  list_incidents.sh  metrics_example.rs  resolve_incident.sh  submit_alert.sh
examples/grpc/: grpc_client.rs
examples/websocket/: README.md  python-client.py  rust-client.rs  typescript-client.ts
functions/: .gcloudignore  package.json
functions/src/: index.ts
kubernetes/: deployment.yaml
plans/: LLM-Incident-Manager-Plan.md
proto/: alerts.proto  incidents.proto
scripts/: install.js  postinstall.js  publish.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/adapters/: mod.rs  targets.rs
src/analytics/: aggregation.rs  dashboard.rs  engine.rs  error.rs  export.rs  metrics.rs  mod.rs  reports.rs  statistics.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
src/circuit_breaker/: config.rs  core.rs  decorators.rs  metrics.rs  middleware.rs  mod.rs  registry.rs  state.rs
src/cli/: main.rs
src/correlation/: engine.rs  mod.rs  models.rs  strategy.rs
src/enrichment/: enrichers.rs  mod.rs  models.rs  pipeline.rs  service.rs
src/escalation/: engine.rs  executor.rs  mod.rs  routing.rs  schedule.rs  state.rs
src/execution/: context.rs  macros.rs  middleware.rs  mod.rs  response.rs  types.rs
src/graphql/: context.rs  dataloaders.rs  metrics.rs  mod.rs  mutations.rs  queries.rs  schema.rs  subscriptions.rs
src/grpc/: alert_service.rs  conversions.rs  incident_service.rs  mod.rs  server.rs
src/integrations/: circuit_breaker_wrappers.rs  mod.rs
src/messaging/: config.rs  error.rs  events.rs  kafka.rs  metrics.rs  mod.rs  nats.rs  service.rs  traits.rs
src/metrics/: README.md  collectors.rs  config.rs  decorators.rs  interceptors.rs  middleware.rs  mod.rs  registry.rs
src/ml/: classifier.rs  features.rs  mod.rs  models.rs  service.rs
src/models/: alert.rs  incident.rs  mod.rs  notification.rs  playbook.rs  policy.rs
src/notifications/: circuit_breaker_sender.rs  email.rs  mod.rs  pagerduty.rs  service.rs  slack.rs  webhook.rs
src/playbooks/: actions.rs  context.rs  executor.rs  mod.rs  service.rs
src/postmortem/: mod.rs
src/processing/: deduplication.rs  mod.rs  processor.rs
src/scheduler/: config.rs  core.rs  error.rs  jobs.rs  metrics.rs  mod.rs  tasks.rs
src/search/: config.rs  document.rs  error.rs  index.rs  mod.rs  query.rs  service.rs
tests/: CIRCUIT_BREAKER_TEST_GUIDE.md  GRAPHQL_TEST_EXECUTION_GUIDE.md  GRAPHQL_TEST_README.md  README_MESSAGING_TESTS.md  README_METRICS_TESTS.md  TEST_EXECUTION_GUIDE.md  WEBSOCKET_TEST_EXECUTION_GUIDE.md  WEBSOCKET_TEST_README.md  analytics_test.rs  circuit_breaker_comprehensive_test.rs  correlation_integration_test.rs  enrichment_integration_test.rs  escalation_integration_test.rs  graphql_api_test.rs  messaging_test.rs  ml_integration_test.rs  notification_integration_test.rs  playbook_integration_test.rs  prometheus_metrics_test.rs  scheduler_test.rs  search_test.rs  storage_integration_test.rs  websocket_graphql_subscription_test.rs  websocket_integration_test.rs  websocket_performance_test.rs  websocket_unit_test.rs
(+45 files in other folders)
