[package]
name = "llm-incident-manager"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["LLM DevOps Team"]
description = "Enterprise-grade incident management system for LLM operations"
license = "MIT"
repository = "https://github.com/llm-devops/llm-incident-manager"
keywords = ["incident", "management", "llm", "devops", "observability"]
categories = ["development-tools", "web-programming"]

[workspace]
members = ["."]

[[bin]]
name = "llm-incident-manager"
path = "src/main.rs"

[[bin]]
name = "llm-im-cli"
path = "src/cli/main.rs"

[dependencies]
# Async Runtime & Concurrency
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
rayon = "1.8"
crossbeam = "0.8"

# Web Frameworks & Networking
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# Email Support
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# gRPC Support
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
tonic-health = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"

# Data Storage & Caching
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }
sled = "0.34"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "cluster-async"] }
bincode = "1.3"
chrono-tz = "0.8"
regex = "1.10"

# Serialization & Data Formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Observability & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# CLI & Configuration
clap = { version = "4.4", features = ["derive", "env", "cargo"] }
config = { version = "0.14", default-features = false, features = ["toml"] }

# Security & Cryptography
sha2 = "0.10"

# Error Handling & Validation
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Date/Time & Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
once_cell = "1.19"

# State Machine
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

# Machine Learning
linfa = "0.7"
linfa-logistic = "0.7"
linfa-trees = "0.7"
linfa-svm = "0.7"
linfa-nn = "0.7"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"
smartcore = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.11"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
